@@ -9,6 +9,7 @@ import com.cpclub.backend.compete.entity.*;
 import com.cpclub.backend.compete.repository.MatchRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -16,7 +17,7 @@ import org.springframework.web.server.ResponseStatusException;
 
 import java.time.Instant;
 import java.time.LocalDateTime;
-import java.time.ZoneId;
+import java.time.ZoneOffset;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -24,6 +25,8 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class CompeteMatchService {
+
+    private static final int POLL_COOLDOWN_SECONDS = 20;
 
     private final MatchRepository matchRepository;
     private final CfProblemRepository cfProblemRepository;
@@ -33,22 +36,18 @@ public class CompeteMatchService {
         String chars = "ABCDEFGHJKLMNPQRSTUVWXYZ23456789";
         StringBuilder sb = new StringBuilder();
         Random rnd = new Random();
-        for (int i = 0; i < 6; i++) {
-            sb.append(chars.charAt(rnd.nextInt(chars.length())));
-        }
+        for (int i = 0; i < 6; i++) sb.append(chars.charAt(rnd.nextInt(chars.length())));
         return sb.toString();
     }
-    
+
     private Set<String> fetchSolvedProblemKeys(List<String> handles) {
         Set<String> solvedSet = new HashSet<>();
         for (String handle : handles) {
             try {
-                // Fetch up to 10000 submissions to be safe
                 List<CfSubmission> submissions = codeforcesApiClient.userStatus(handle, 1, 10000);
                 for (CfSubmission sub : submissions) {
-                    if ("OK".equals(sub.getVerdict()) && sub.getProblem() != null && sub.getProblem().getContestId() != null) {
+                    if ("OK".equals(sub.getVerdict()) && sub.getProblem() != null && sub.getProblem().getContestId() != null)
                         solvedSet.add(sub.getProblem().getContestId() + "-" + sub.getProblem().getIndex());
-                    }
                 }
             } catch (Exception e) {
                 log.warn("Failed to fetch submissions for handle {} during problem generation", handle, e);
@@ -59,23 +58,31 @@ public class CompeteMatchService {
 
     @Transactional
     public MatchResponseDto createMatch(MatchCreationDto dto) {
+        // Bug #2 fix: validate gridSize server-side (reference: createMatch.ts line 45)
+        if (!List.of(3, 4, 5, 6).contains(dto.getGridSize()))
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "gridSize must be 3, 4, 5, or 6");
+
         String matchId = generateMatchId();
-        
+
+        // Bug #1 fix: convert Instant (UTC from frontend toISOString()) -> LocalDateTime UTC
+        LocalDateTime startTime = LocalDateTime.ofInstant(dto.getStartTime(), ZoneOffset.UTC);
+
         Match match = new Match();
         match.setId(matchId);
         match.setMode(dto.getMode());
-        match.setStartTime(dto.getStartTime());
+        match.setStartTime(startTime);
         match.setDurationMinutes(dto.getDurationMinutes());
         match.setMinRating(dto.getMinRating());
         match.setMaxRating(dto.getMaxRating());
         match.setGridSize(dto.getGridSize());
-        match.setReplaceIncrement(dto.getReplaceIncrement());
+        match.setReplaceIncrement(dto.getMode() == MatchMode.replace ? dto.getReplaceIncrement() : null);
         match.setTimeoutMinutes(dto.getTimeoutMinutes());
-        match.setShowRatings(dto.getShowRatings() != null ? dto.getShowRatings() : true);
-        match.setLastPolledAt(LocalDateTime.now());
-        
+        match.setShowRatings(dto.getShowRatings() != null ? dto.getShowRatings() : Boolean.TRUE);
+        match.setLastPolledAt(LocalDateTime.now(ZoneOffset.UTC));
+        match.setSolveLogs(new ArrayList<>()); // Bug #5 fix: init list to avoid NPE on first poll
+
         match = matchRepository.save(match);
-        
+
         List<Team> teams = new ArrayList<>();
         List<String> allHandles = new ArrayList<>();
         for (MatchCreationDto.TeamDto tDto : dto.getTeams()) {
@@ -83,7 +90,6 @@ public class CompeteMatchService {
             t.setName(tDto.getName());
             t.setColor(tDto.getColor());
             t.setMatch(match);
-            
             List<Member> members = new ArrayList<>();
             for (String h : tDto.getMembers()) {
                 Member m = new Member();
@@ -96,43 +102,32 @@ public class CompeteMatchService {
             teams.add(t);
         }
         match.setTeams(teams);
-        
-        // Exact logic from bingo-cp: filter out already solved problems by checking codeforces live
+
+        // Bug #3: Filter solved AND *special problems (query already excludes *special via CfProblemRepository)
         Set<String> solvedKeys = fetchSolvedProblemKeys(allHandles);
-        
+
         int problemCount = dto.getGridSize() * dto.getGridSize();
-        // Pull extra problems from DB to ensure we have enough after filtering
-        List<com.cpclub.backend.codeforces.entity.CfProblem> pool = 
-            cfProblemRepository.findRandomProblemsByRatingRange(
-                dto.getMinRating(), 
-                dto.getMaxRating(), 
-                problemCount * 10
-            );
-            
+        List<com.cpclub.backend.codeforces.entity.CfProblem> pool =
+            cfProblemRepository.findRandomProblemsByRatingRange(dto.getMinRating(), dto.getMaxRating(), problemCount * 10);
+
         List<com.cpclub.backend.codeforces.entity.CfProblem> valid = pool.stream()
             .filter(p -> p.getContestId() != null && !solvedKeys.contains(p.getContestId() + "-" + p.getProblemIndex()))
             .limit(problemCount)
-            .toList();
-            
-        // If we really couldn't find enough unsolved problems, fallback to whatever we found (same as bingo-cp)
+            .collect(Collectors.toList());
+
         if (valid.size() < problemCount) {
-             List<com.cpclub.backend.codeforces.entity.CfProblem> fallback = pool.stream()
-                .filter(p -> p.getContestId() != null)
-                .limit(problemCount)
-                .toList();
-             if (fallback.size() < problemCount) {
-                 throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Not enough problems found in this rating range");
-             }
-             valid = fallback;
+            List<com.cpclub.backend.codeforces.entity.CfProblem> fallback = pool.stream()
+                .filter(p -> p.getContestId() != null).limit(problemCount).collect(Collectors.toList());
+            if (fallback.size() < problemCount)
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Not enough problems found in this rating range");
+            valid = fallback;
         }
-        
+
         List<Problem> problems = new ArrayList<>();
         for (int i = 0; i < problemCount; i++) {
             com.cpclub.backend.codeforces.entity.CfProblem cfP = valid.get(i);
-            
             Problem p = new Problem();
-            ProblemId pid = new ProblemId(cfP.getContestId(), cfP.getProblemIndex(), matchId);
-            p.setId(pid);
+            p.setId(new ProblemId(cfP.getContestId(), cfP.getProblemIndex(), matchId));
             p.setMatch(match);
             p.setName(cfP.getName());
             p.setRating(cfP.getRating());
@@ -141,7 +136,6 @@ public class CompeteMatchService {
             problems.add(p);
         }
         match.setProblems(problems);
-        
         match = matchRepository.save(match);
         return mapToDto(match);
     }
@@ -157,186 +151,178 @@ public class CompeteMatchService {
     public void pollMatch(String matchId) {
         Match match = matchRepository.findById(matchId)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Match not found"));
-        
-        if (LocalDateTime.now().isAfter(match.getStartTime().plusMinutes(match.getDurationMinutes()))) {
+
+        // Bug #5 fix: null guard solveLogs BEFORE any use
+        if (match.getSolveLogs() == null) match.setSolveLogs(new ArrayList<>());
+
+        // Bug #11 fix: all time comparisons in UTC
+        LocalDateTime nowUtc = LocalDateTime.now(ZoneOffset.UTC);
+
+        if (nowUtc.isAfter(match.getStartTime().plusMinutes(match.getDurationMinutes()))) return;
+
+        // Bug #9 fix: 20-second Codeforces rate-limit cooldown (ref: poll-submissions.ts)
+        if (match.getLastPolledAt() != null && match.getLastPolledAt().plusSeconds(POLL_COOLDOWN_SECONDS).isAfter(nowUtc)) {
             return;
         }
 
         List<String> handles = match.getTeams().stream()
-                .flatMap(t -> t.getMembers().stream())
-                .map(Member::getHandle)
-                .toList();
+                .flatMap(t -> t.getMembers().stream()).map(Member::getHandle).toList();
 
-        Map<String, Problem> problemLookup = new HashMap<>();
+        Map<String, Problem> activeLookup = new HashMap<>();
         for (Problem p : match.getProblems()) {
-            problemLookup.put(p.getId().getContestId() + "-" + p.getId().getIndex(), p);
+            if (Boolean.TRUE.equals(p.getActive()))
+                activeLookup.put(p.getId().getContestId() + "-" + p.getId().getIndex(), p);
         }
 
-        boolean newSolve = false;
+        boolean changed = false;
 
         for (String handle : handles) {
             try {
                 List<CfSubmission> submissions = codeforcesApiClient.userStatus(handle, 1, 20);
-                
                 for (CfSubmission sub : submissions) {
                     if (!"OK".equals(sub.getVerdict())) continue;
-                    
-                    LocalDateTime subTime = LocalDateTime.ofInstant(
-                        Instant.ofEpochSecond(sub.getCreationTimeSeconds()), ZoneId.systemDefault());
-                        
+                    if (sub.getProblem() == null || sub.getProblem().getContestId() == null) continue;
+
+                    // Bug #11 fix: explicit UTC conversion of Codeforces epoch timestamp
+                    LocalDateTime subTime = LocalDateTime.ofInstant(Instant.ofEpochSecond(sub.getCreationTimeSeconds()), ZoneOffset.UTC);
                     if (subTime.isBefore(match.getStartTime())) continue;
-                    
+
                     String key = sub.getProblem().getContestId() + "-" + sub.getProblem().getIndex();
-                    Problem matchedProblem = problemLookup.get(key);
-                    
-                    if (matchedProblem != null && matchedProblem.getActive()) {
-                        Team team = match.getTeams().stream()
-                            .filter(t -> t.getMembers().stream().anyMatch(m -> m.getHandle().equals(handle)))
-                            .findFirst().orElse(null);
-                            
-                        if (team != null) {
-                            boolean alreadySolved = match.getSolveLogs().stream()
-                                .anyMatch(l -> l.getContestId().equals(matchedProblem.getId().getContestId()) &&
-                                               l.getIndex().equals(matchedProblem.getId().getIndex()));
-                                               
-                            if (!alreadySolved) {
-                                SolveLog log = new SolveLog();
-                                log.setHandle(handle);
-                                log.setTeam(team.getName());
-                                log.setTimestamp(subTime);
-                                log.setContestId(matchedProblem.getId().getContestId());
-                                log.setIndex(matchedProblem.getId().getIndex());
-                                log.setMatch(match);
-                                log.setProblem(matchedProblem);
-                                
-                                if (match.getSolveLogs() == null) match.setSolveLogs(new ArrayList<>());
-                                match.getSolveLogs().add(log);
-                                
-                                newSolve = true;
-                                
-                                // EXACT REPLACE MODE LOGIC
-                                if (match.getMode() == MatchMode.replace) {
-                                    matchedProblem.setActive(false);
-                                    
-                                    int increment = match.getReplaceIncrement() != null ? match.getReplaceIncrement() : 100;
-                                    int newRatingTarget = Math.min(3500, (matchedProblem.getRating() != null ? matchedProblem.getRating() : 0) + increment);
-                                    
-                                    Set<String> solvedKeys = fetchSolvedProblemKeys(handles);
-                                    
-                                    List<com.cpclub.backend.codeforces.entity.CfProblem> pool = 
-                                        cfProblemRepository.findRandomProblemsByRatingRange(
-                                            newRatingTarget, 
-                                            newRatingTarget, 
-                                            20
-                                        );
-                                        
-                                    Set<String> existingKeys = match.getProblems().stream()
-                                        .map(p -> p.getId().getContestId() + "-" + p.getId().getIndex())
-                                        .collect(Collectors.toSet());
-                                        
-                                    com.cpclub.backend.codeforces.entity.CfProblem replacement = pool.stream()
-                                        .filter(p -> p.getContestId() != null && 
-                                                     !existingKeys.contains(p.getContestId() + "-" + p.getProblemIndex()) &&
-                                                     !solvedKeys.contains(p.getContestId() + "-" + p.getProblemIndex()))
-                                        .findFirst().orElseGet(() -> pool.stream()
-                                        .filter(p -> p.getContestId() != null && !existingKeys.contains(p.getContestId() + "-" + p.getProblemIndex()))
-                                        .findFirst().orElse(null));
-                                        
-                                    if (replacement != null) {
-                                        Problem p = new Problem();
-                                        ProblemId pid = new ProblemId(replacement.getContestId(), replacement.getProblemIndex(), matchId);
-                                        p.setId(pid);
-                                        p.setMatch(match);
-                                        p.setName(replacement.getName());
-                                        p.setRating(replacement.getRating());
-                                        p.setPosition(matchedProblem.getPosition());
-                                        p.setActive(true);
-                                        match.getProblems().add(p);
-                                        problemLookup.put(replacement.getContestId() + "-" + replacement.getProblemIndex(), p);
-                                    }
-                                }
+                    Problem matched = activeLookup.get(key);
+                    if (matched == null) continue;
+
+                    Team team = match.getTeams().stream()
+                        .filter(t -> t.getMembers().stream().anyMatch(m -> m.getHandle().equals(handle)))
+                        .findFirst().orElse(null);
+                    if (team == null) continue;
+
+                    boolean alreadySolved = match.getSolveLogs().stream()
+                        .anyMatch(l -> l.getContestId().equals(matched.getId().getContestId()) &&
+                                       l.getIndex().equals(matched.getId().getIndex()));
+                    if (alreadySolved) continue;
+
+                    try {
+                        SolveLog sl = new SolveLog();
+                        sl.setHandle(handle);
+                        sl.setTeam(team.getColor()); // Bug #8 fix: store COLOR not name
+                        sl.setTimestamp(subTime);
+                        sl.setContestId(matched.getId().getContestId());
+                        sl.setIndex(matched.getId().getIndex());
+                        sl.setMatch(match);
+                        sl.setProblem(matched);
+                        match.getSolveLogs().add(sl);
+                        changed = true;
+
+                        if (match.getMode() == MatchMode.replace) {
+                            matched.setActive(false);
+                            activeLookup.remove(key);
+
+                            int increment = match.getReplaceIncrement() != null ? match.getReplaceIncrement() : 100;
+                            int newTarget = Math.min(3500, (matched.getRating() != null ? matched.getRating() : 0) + increment);
+
+                            Set<String> solvedKeys = fetchSolvedProblemKeys(handles);
+                            List<com.cpclub.backend.codeforces.entity.CfProblem> pool =
+                                cfProblemRepository.findRandomProblemsByRatingRange(newTarget, newTarget, 20);
+                            Set<String> existingKeys = match.getProblems().stream()
+                                .map(p -> p.getId().getContestId() + "-" + p.getId().getIndex())
+                                .collect(Collectors.toSet());
+
+                            com.cpclub.backend.codeforces.entity.CfProblem replacement = pool.stream()
+                                .filter(p -> p.getContestId() != null &&
+                                             !existingKeys.contains(p.getContestId() + "-" + p.getProblemIndex()) &&
+                                             !solvedKeys.contains(p.getContestId() + "-" + p.getProblemIndex()))
+                                .findFirst()
+                                .orElseGet(() -> pool.stream()
+                                    .filter(p -> p.getContestId() != null && !existingKeys.contains(p.getContestId() + "-" + p.getProblemIndex()))
+                                    .findFirst().orElse(null));
+
+                            if (replacement != null) {
+                                Problem newP = new Problem();
+                                newP.setId(new ProblemId(replacement.getContestId(), replacement.getProblemIndex(), matchId));
+                                newP.setMatch(match);
+                                newP.setName(replacement.getName());
+                                newP.setRating(replacement.getRating());
+                                newP.setPosition(matched.getPosition());
+                                newP.setActive(true);
+                                match.getProblems().add(newP);
+                                activeLookup.put(replacement.getContestId() + "-" + replacement.getProblemIndex(), newP);
+                            } else {
+                                // Bug #12 fix: no replacement found — reactivate so grid doesn't shrink
+                                log.warn("No replacement found for position {}, reactivating original", matched.getPosition());
+                                matched.setActive(true);
+                                activeLookup.put(key, matched);
+                                match.getSolveLogs().remove(sl);
                             }
                         }
+                    } catch (DataIntegrityViolationException e) {
+                        // Bug #4 fix: unique DB constraint caught — another concurrent request handled this
+                        log.debug("Duplicate solve detected for {}/{} — skipping", matched.getId().getContestId(), matched.getId().getIndex());
                     }
                 }
             } catch (Exception e) {
                 log.error("Failed to poll handle {}", handle, e);
             }
         }
-        
-        if (newSolve) {
-            matchRepository.save(match);
-        }
+
+        match.setLastPolledAt(nowUtc); // always update cooldown timestamp
+        matchRepository.save(match);
+    }
+
+    // Bug #10 fix: allow winning client to propagate match end to all other clients
+    @Transactional
+    public void setMatchDuration(String matchId, int durationMinutes) {
+        Match match = matchRepository.findById(matchId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Match not found"));
+        match.setDurationMinutes(durationMinutes);
+        matchRepository.save(match);
     }
 
     private MatchResponseDto mapToDto(Match match) {
+        // Bug #6/#11 fix: emit startTime as ISO Instant string so frontend new Date() works correctly
+        Instant startInstant = match.getStartTime() != null ? match.getStartTime().toInstant(ZoneOffset.UTC) : null;
+
         MatchResponseDto.MatchResponseDtoBuilder b = MatchResponseDto.builder()
             .id(match.getId())
-            .startTime(match.getStartTime())
+            .startTime(startInstant)
             .durationMinutes(match.getDurationMinutes())
             .mode(match.getMode())
             .replaceIncrement(match.getReplaceIncrement())
             .gridSize(match.getGridSize())
             .timeoutMinutes(match.getTimeoutMinutes())
             .showRatings(match.getShowRatings());
-            
-        List<MatchResponseDto.TeamDto> teams = match.getTeams().stream().map(t -> 
+
+        b.teams((match.getTeams() == null) ? List.of() : match.getTeams().stream().map(t ->
             MatchResponseDto.TeamDto.builder()
-                .name(t.getName())
-                .color(t.getColor())
+                .name(t.getName()).color(t.getColor())
                 .members(t.getMembers().stream().map(Member::getHandle).toList())
-                .build()
-        ).toList();
-        b.teams(teams);
-        
-        List<MatchResponseDto.SolveEntryDto> logs = (match.getSolveLogs() == null) ? List.of() : 
-            match.getSolveLogs().stream().map(l -> 
-                MatchResponseDto.SolveEntryDto.builder()
-                    .handle(l.getHandle())
-                    .team(l.getTeam())
-                    .timestamp(l.getTimestamp())
-                    .problem(MatchResponseDto.ProblemRefDto.builder()
-                        .contestId(l.getContestId())
-                        .index(l.getIndex())
-                        .build())
-                    .build()
-            ).toList();
-        b.solveLog(logs);
-        
-        List<MatchResponseDto.ProblemCellDto> probs = match.getProblems().stream().map(p -> {
+                .build()).toList());
+
+        b.solveLog((match.getSolveLogs() == null) ? List.of() : match.getSolveLogs().stream().map(l ->
+            MatchResponseDto.SolveEntryDto.builder()
+                .handle(l.getHandle()).team(l.getTeam())
+                .timestamp(l.getTimestamp() != null ? l.getTimestamp().toInstant(ZoneOffset.UTC) : null)
+                .problem(MatchResponseDto.ProblemRefDto.builder()
+                    .contestId(l.getContestId()).index(l.getIndex()).build())
+                .build()).toList());
+
+        b.problems((match.getProblems() == null) ? List.of() : match.getProblems().stream().map(p -> {
             int pos = p.getPosition();
-            int r = pos / match.getGridSize();
-            int c = pos % match.getGridSize();
-            
-            String solvedBy = null;
-            String claimedBy = null;
+            String solvedBy = null, claimedBy = null;
             if (match.getSolveLogs() != null) {
-                Optional<SolveLog> log = match.getSolveLogs().stream()
-                    .filter(l -> l.getContestId().equals(p.getId().getContestId()) && 
-                                 l.getIndex().equals(p.getId().getIndex()))
+                Optional<SolveLog> sl = match.getSolveLogs().stream()
+                    .filter(l -> l.getContestId().equals(p.getId().getContestId()) && l.getIndex().equals(p.getId().getIndex()))
                     .min(Comparator.comparing(SolveLog::getTimestamp));
-                if (log.isPresent()) {
-                    solvedBy = log.get().getTeam();
-                    claimedBy = log.get().getHandle();
-                }
+                if (sl.isPresent()) { solvedBy = sl.get().getTeam(); claimedBy = sl.get().getHandle(); }
             }
-            
             return MatchResponseDto.ProblemCellDto.builder()
-                .row(r)
-                .col(c)
-                .contestId(p.getId().getContestId())
-                .index(p.getId().getIndex())
-                .name(p.getName())
-                .rating(p.getRating())
+                .row(pos / match.getGridSize()).col(pos % match.getGridSize())
+                .contestId(p.getId().getContestId()).index(p.getId().getIndex())
+                .name(p.getName()).rating(p.getRating())
                 .link("https://codeforces.com/contest/" + p.getId().getContestId() + "/problem/" + p.getId().getIndex())
-                .active(p.getActive())
-                .position(p.getPosition())
-                .solvedBy(solvedBy)
-                .claimedBy(claimedBy)
-                .build();
-        }).toList();
-        b.problems(probs);
-        
+                .active(p.getActive()).position(pos)
+                .solvedBy(solvedBy).claimedBy(claimedBy).build();
+        }).toList());
+
         return b.build();
     }
 }
